activity/src/main/k8s/backend-benelux-v2.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  labels:
    app: "activity"
    version: "v2"
    app.kubernetes.io/name: "activity"
    app.kubernetes.io/version: "2.0.0"
  name: "activity-v2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "activity"
      version: "v2"
      app.kubernetes.io/name: "activity"
      app.kubernetes.io/version: "2.0.0"
  template:
    metadata:
      labels:
        app: "activity"
        version: "v2"
        app.kubernetes.io/name: "activity"
        app.kubernetes.io/version: "2.0.0"
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        - name: "KUBERNETES_NAMESPACE"
          valueFrom:
            fieldRef:
              fieldPath: "metadata.namespace"
        - name: "WORKER_CLOUD_ID"
          value: "BENELUX"
        image: "quay.io/anasandbox/activity:1.0.1"
        imagePullPolicy: "IfNotPresent"
        name: "activity"
        ports:
        - containerPort: 8080
          name: "http"
          protocol: "TCP"
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
      serviceAccount: "activity"
