activity/src/main/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2021-10-24 - 09:55:28 +0000
  labels:
    app.kubernetes.io/name: activity
    app.kubernetes.io/version: 1.0.0
  name: activity
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: activity
                port:
                  name: http
            path: /
            pathType: Prefix
