activity/src/main/k8s/virtual-service-activity-default.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: activity
spec:
  hosts:
    - "*"
  gateways:
    - activity-gateway
  http:
    - match:
        - uri:
            prefix: /activity
      rewrite:
        uri: /activity
      route:
        - destination:
            host: activity
            port:
              number: 8080
