activity/src/main/k8s/virtual-service-activity-timeout.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: activity
spec:
  hosts:
    - activity
  http:
    - route:
        - destination:
            host: activity
      timeout: 1.000s
