activity/src/main/k8s/virtual-service-activity-v1-mirror-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: activity
spec:
  hosts:
    - name: activity
  http:
  - route:
    - destination:
        host: activity
        subset: version-v1
    mirror:
      host: activity
      subset: version-v2
---
