activity/src/main/k8s/virtual-service-activity-v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: activity
spec:
  hosts:
    - name: activity
  http:
    - route:
        - destination:
            host: activity
            subset: version-v1
          weight: 100
---
