activity/src/main/k8s/virtual-service-activity-v1_and_v2_503.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: activity
spec:
  hosts:
    - name: activity
  http:
    - fault:
        abort:
          httpStatus: 503
          percentage:
            value: 100
      route:
        - destination: null
          host: activity
          subset: version-v1
    - route:
        - destination:
            host: activity
            subset: version-v1
          weight: 75
        - destination:
            host: activity
            subset: version-v2
          weight: 25
