activity/src/main/k8s/virtual-service-activity-v2_retry.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: activity
spec:
  hosts:
    - name: activity
  http:
    - route:
        - destination:
            host: activity
      retries:
        attempts: 4
        retryOn: 5xx
---
