activity/src/main/k8s/virtual-service-safari-activity-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: activity
spec:
  hosts:
    - name: activity
  http:
    - match:
        - headers:
            baggage-user-agent:
              regex: .*Safari.*
      route:
        - destination:
            host: activity
            subset: version-v2
    - route:
        - destination:
            host: activity
            subset: version-v1
---
